@@ -46,6 +46,10 @@ public:
     checkCommand( const std::string& current,
                   const std::string& next );
 
+    virtual bool
+    checkWrapperOption( const std::string& current,
+                        const std::string& next );
+
     virtual void
     checkObjects( SCOREP_Instrumenter* instrumenter );
 };
